V.Next
----------
- [MINOR] Add telemetry relay client (#1757)
- [MINOR] Add telemetry error events (#1768)
- [MAJOR] Adding YubiKit SDK, which requires Java Version 8 and will thus bump up Java version overall to 8; added keyboard flag to android:configChanges for all activities that could interact with a YubiKey. (#1729)
- [MINOR] Support WordApp local apk install in UI automation flows (#1732)
- [PATCH] Fix SDK Cancel when using authorization in current task (#1743)
- [MINOR] Added support for broadcasting to applications installed on the device. (#1744)
- [PATCH] Fix APPLICATION_CANCELLED by handling back button press (#1725)
- [PATCH] Added Base64 encode for the AuthorizationRequest state parameter (#1750)
- [PATCH] Fix missing authority_url when creating the authority audience (#1753)

Version 5.0.0
----------
- [MAJOR] Move IKeyStoreKeyManager and IDevicePopManager to common4j (#1683)
- [MINOR] Added support for broadcasting to applications installed on the device.

Version 4.2.0
----------
- [PATCH] Add exception handling in Content Provider strategy, for broker communication (#1722)
- [MINOR] Support TenantID value from eSTS in PKeyAuth flows (#1712)
- [MINOR] Implement cert loader for both multiple and legacy WPJ data store in PKeyAuth (#1711)

Version 4.1.0
----------
- [PATCH] Add null check to avoid NPE when checking for AccountTypesWithManagementDisabled (#1713)
- [MINOR] Add prompt=create support. (#1707)
- [PATCH] Clears client cert preferences so that multiple CBA login attempts can be completed in same session (#1688)
- [PATCH] Fixing potential deadlock state in executor service for interactive requests (#1696)
- [PATCH] Ensure consistent logging tags (#1701)
- [PATCH] Update gson version to 2.8.9 (#1694)
- [PATCH] Fix silent flow pkeyauth, add build param to disable silent flow timeout during debugging (#1687)
- [MINOR] Hook telemetry to LocalAuthenticationResult and BaseException (#1636)